--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/slider.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/slider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
 </head>
@@ -24,8 +24,8 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="/index.html"><img src="/image/logo.png" class="logo-default"></a>
-                        <a href="/index.html"><img src="/image/logo_02.png" class="logo-scrolled"></a>
+                        <a href="/index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="/index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
                     <ul>
                         <li><a href="">Brand</a></li>
