--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="/index.html"><img src="image/logo.png" class="logo-default"></a>
-                        <a href="/index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
+                        <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
                     <ul>
                         <li><a href="">Brand</a></li>
@@ -303,15 +303,15 @@
             <div class="sns">
                 <h2>HaagenDazs SNS</h2>
                 <div class="slider4">
-                    <div><img src="/image/sns_01.png"></div>
-                    <div><img src="/image/sns_02.png"></div>
-                    <div><img src="/image/sns_03.png"></div>
-                    <div><img src="/image/sns_04.png"></div>
-                    <div><img src="/image/sns_05.png"></div>
-                    <div><img src="/image/sns_06.png"></div>
-                    <div><img src="/image/sns_07.png"></div>
-                    <div><img src="/image/sns_08.png"></div>
-                    <div><img src="/image/sns_09.png"></div>
+                    <div><img src="image/sns_01.png"></div>
+                    <div><img src="image/sns_02.png"></div>
+                    <div><img src="image/sns_03.png"></div>
+                    <div><img src="image/sns_04.png"></div>
+                    <div><img src="image/sns_05.png"></div>
+                    <div><img src="image/sns_06.png"></div>
+                    <div><img src="image/sns_07.png"></div>
+                    <div><img src="image/sns_08.png"></div>
+                    <div><img src="image/sns_09.png"></div>
                 </div>
             </div>
             <script>
@@ -349,7 +349,7 @@
     </script>
     <footer>
         <div class="footer">
-            <h1><a href="/index.html"><img src="/image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
