--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li><img src="image/cup_04.png" data-name="cup_04"></li>
                     <li><img src="image/cup_05.png" data-name="cup_05"></li>
                 </ul>
-                <p>more<img src="/image/circle.png"></p>
+                <p>more<img src="image/circle.png"></p>
             </div>
         </div>
 
@@ -245,7 +245,7 @@
                     <li><img src="image/drink_04.png"></li>
                     <li><img src="image/drink_05.png"></li>
                 </ul>
-                <p>more<img src="/image/circle.png"></p>
+                <p>more<img src="image/circle.png"></p>
             </div>
             <script>
                 /* ============================
