--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         <li><a href="">Brand</a></li>
                         <li><a href="">Menu</a></li>
                         <li><a href="">Online Shop</a></li>
-                        <li><a href="/sub_02.html">Store</a></li>
-                        <li><a href="/sub_01.html">B2B</a></li>
+                        <li><a href="sub_02.html">Store</a></li>
+                        <li><a href="sub_01.html">B2B</a></li>
                     </ul>
                     <p><a href="">login</a></p>
                 </div>
@@ -288,7 +288,7 @@
             </script>
             <div class="store_info_warp">
                 <div class="store_info">
-                    <h2><a href="/sub_02.html">Store Info</a></h2>
+                    <h2><a href="sub_02.html">Store Info</a></h2>
                     <ul class="store_info_list">
                         <li>여의도점</li>
                         <li>분당미금점</li>
@@ -303,15 +303,15 @@
             <div class="sns">
                 <h2>HaagenDazs SNS</h2>
                 <div class="slider4">
-                    <div><img src="image/sns_01.png"></div>
-                    <div><img src="image/sns_02.png"></div>
-                    <div><img src="image/sns_03.png"></div>
-                    <div><img src="image/sns_04.png"></div>
-                    <div><img src="image/sns_05.png"></div>
-                    <div><img src="image/sns_06.png"></div>
-                    <div><img src="image/sns_07.png"></div>
-                    <div><img src="image/sns_08.png"></div>
-                    <div><img src="image/sns_09.png"></div>
+                    <div><img src="../image/sns_01.png"></div>
+                    <div><img src="../image/sns_02.png"></div>
+                    <div><img src="../image/sns_03.png"></div>
+                    <div><img src="../image/sns_04.png"></div>
+                    <div><img src="../image/sns_05.png"></div>
+                    <div><img src="../image/sns_06.png"></div>
+                    <div><img src="../image/sns_07.png"></div>
+                    <div><img src="../image/sns_08.png"></div>
+                    <div><img src="../image/sns_09.png"></div>
                 </div>
             </div>
             <script>
