--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
             <div class="sns">
                 <h2>HaagenDazs SNS</h2>
                 <div class="slider4">
-                    <div><img src="../image/sns_01.png"></div>
-                    <div><img src="../image/sns_02.png"></div>
+                    <div><img src="image/sns_01.png"></div>
+                    <div><img src="image/sns_02.png"></div>
                     <div><img src="../image/sns_03.png"></div>
                     <div><img src="../image/sns_04.png"></div>
                     <div><img src="../image/sns_05.png"></div>
