--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
                 <div class="slider4">
                     <div><img src="image/sns_01.png"></div>
                     <div><img src="image/sns_02.png"></div>
-                    <div><img src="../image/sns_03.png"></div>
-                    <div><img src="../image/sns_04.png"></div>
-                    <div><img src="../image/sns_05.png"></div>
-                    <div><img src="../image/sns_06.png"></div>
-                    <div><img src="../image/sns_07.png"></div>
-                    <div><img src="../image/sns_08.png"></div>
-                    <div><img src="../image/sns_09.png"></div>
+                    <div><img src="image/sns_03.png"></div>
+                    <div><img src="image/sns_04.png"></div>
+                    <div><img src="image/sns_05.png"></div>
+                    <div><img src="image/sns_06.png"></div>
+                    <div><img src="image/sns_07.png"></div>
+                    <div><img src="image/sns_08.png"></div>
+                    <div><img src="image/sns_09.png"></div>
                 </div>
             </div>
             <script>
