--- a/sub_02.html
+++ b/sub_02.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/sub_02.css">
-    <link rel="stylesheet" href="/css/slider.css">
+    <link rel="stylesheet" href="css/sub_02.css">
+    <link rel="stylesheet" href="css/slider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
     <title>Document</title>
@@ -17,15 +17,15 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="/index.html"><img src="/image/logo.png" class="logo-default"></a>
-                        <a href="/index.html"><img src="/image/logo_02.png" class="logo-scrolled"></a>
+                        <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
                     <ul>
                         <li><a href="">Brand</a></li>
                         <li><a href="">Menu</a></li>
                         <li><a href="">Online Shop</a></li>
-                        <li><a href="/sub_02.html">Store</a></li>
-                        <li><a href="/sub_01.html">B2B</a></li>
+                        <li><a href="sub_02.html">Store</a></li>
+                        <li><a href="sub_01.html">B2B</a></li>
                     </ul>
                     <p><a href="">login</a></p>
                 </div>
@@ -33,12 +33,12 @@
         </div>
         <div class="visual">
             <h2>HaagenDazs Store</h2>
-            <img src="/image/visual_02.png">
+            <img src="image/visual_02.png">
         </div>
     </header>
     <main>
         <div class="store_container">
-            <div class="store"><img src="/image/store_01.png">
+            <div class="store"><img src="image/store_01.png">
                 <ul>
                     <li>
                         <h2>하겐다즈 여의도점</h2>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="store_container">
-            <div class="store"><img src="/image/store_02.png">
+            <div class="store"><img src="image/store_02.png">
                 <ul>
                     <li>
                         <h2>하겐다즈 분당미금점</h2>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="store_container">
-            <div class="store"><img src="/image/store_03.png">
+            <div class="store"><img src="image/store_03.png">
                 <ul>
                     <li>
                         <h2>하겐다즈 부산마린시티점</h2>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="store_container">
-            <div class="store"><img src="/image/store_04.png">
+            <div class="store"><img src="image/store_04.png">
                 <ul>
                     <li>
                         <h2>하겐다즈 서초점</h2>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="store_container">
-            <div class="store"><img src="/image/store_05.png">
+            <div class="store"><img src="image/store_05.png">
                 <ul>
                     <li>
                         <h2>하겐다즈 판교점</h2>
@@ -90,7 +90,7 @@
     </main>
     <footer>
         <div class="footer">
-            <h1><a href="/index.html"><img src="/image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
