--- a/sub_01.html
+++ b/sub_01.html
@@ -14,15 +14,15 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="/index.html"><img src="/image/logo.png" class="logo-default"></a>
-                        <a href="/index.html"><img src="/image/logo_02.png" class="logo-scrolled"></a>
+                        <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
                     <ul>
                         <li><a href="">Brand</a></li>
                         <li><a href="">Menu</a></li>
                         <li><a href="">Online Shop</a></li>
-                        <li><a href="/sub_02.html">Store</a></li>
-                        <li><a href="/sub_01.html">B2B</a></li>
+                        <li><a href="sub_02.html">Store</a></li>
+                        <li><a href="sub_01.html">B2B</a></li>
                     </ul>
                     <p><a href="">login</a></p>
                 </div>
@@ -30,13 +30,13 @@
         </div>
         <div class="visual">
             <h2>HaagenDazs B2B</h2>
-            <img src="/image/visual_01.png">
+            <img src="image/visual_01.png">
         </div>
     </header>
     <main>
         <div class="info_warp_01">
             <div class="info">
-                <img src="/image/sub_01.png">
+                <img src="image/sub_01.png">
                 <ul>
                     <li>
                         <h2>카페 & 레스토랑</h2>
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <div class="info">
-                <img src="/image/sub_02.png">
+                <img src="image/sub_02.png">
                 <ul>
                     <li>
                         <h2>호텔</h2>
@@ -62,7 +62,7 @@
                     </li>
                     <li>국내외의 주요 골프장과 리조트에서 하겐다즈 아이스크림 제품을 공급하고 있습니다.</li>
                 </ul>
-                <img src="/image/sub_03.png">
+                <img src="image/sub_03.png">
             </div>
             <div class="info">
                 <ul>
@@ -71,7 +71,7 @@
                     </li>
                     <li>긴 여행 중 즐거움을 위해 국내외의 주요 항공사에 기내식으로 하겐다즈 아이스크림이 사용되고 있습니다.</li>
                 </ul>
-                <img src="/image/sub_04.png">
+                <img src="image/sub_04.png">
             </div>
         </div>
         <div class="info_bottom_01">
@@ -104,7 +104,7 @@
     </main>
     <footer>
         <div class="footer">
-            <h1><a href="/index.html"><img src="/image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
