--- a/sub_01.html
+++ b/sub_01.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/sub_01.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Document</title>
 </head>
 
@@ -17,94 +18,115 @@
                         <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
                         <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
-                    <ul>
-                        <li><a href="">Brand</a></li>
-                        <li><a href="">Menu</a></li>
-                        <li><a href="">Online Shop</a></li>
-                        <li><a href="sub_02.html">Store</a></li>
-                        <li><a href="sub_01.html">B2B</a></li>
+                    <ul class="gnb">
+                        <li>
+                            <p class="gnb_title">Brand</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="">소개</a></li>
+                                <li><a href="">BI</a></li>
+                                <li><a href="">본사</a></li>
+                                <li><a href="">오시는길</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">Menu</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="">온라인스토어</a></li>
+                                <li class="dropdown-sub"><a href="">컵 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="">바 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="">샌드&콘 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="">케이크</a></li>
+                                <li><a href="">오프라인 스토어</a></li>
+                                <li class="dropdown-sub"><a href="">크레이션 메뉴</a></li>
+                                <li class="dropdown-sub"><a href="">아이스크림 드링크</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">Online Shop</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="">컵 아이스크림</a></li>
+                                <li><a href="">바 아이스크림</a></li>
+                                <li><a href="">샌드&콘 아이스크림</a></li>
+                                <li><a href="">케이크</a></li>
+                                <li><a href="">공지</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">Store</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="/sub_02.html">매장정보</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">B2B</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="/sub_01.html">비즈니스 파트너</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                    <p><a href="">login</a></p>
+                    <p>
+                        <a href="" class="login">login</a>
+                        <a href="" class="hamburger"><img src="../image/hamburger.png"></a>
+                    </p>
+                    <div class="mobile-menu">
+                        <ul class="gnb-mobile"></ul>
+                    </div>
+                    <div class="menu-overlay"></div>
                 </div>
             </div>
         </div>
+        <script>
+            $(window).on("load", function () {
+                console.log("window loaded - initializing mobile menu copy");
+
+                const gnbHtml = $(".gnb").html();
+                if (!gnbHtml) {
+                    console.warn("복사할 .gnb 내용이 비어있습니다.");
+                } else {
+                    $(".gnb-mobile").html(gnbHtml);
+                    console.log(".gnb -> .gnb-mobile 복사 완료");
+                }
+
+                $(".hamburger").off("click").on("click", function (e) {
+                    e.preventDefault();
+                    $(".mobile-menu, .menu-overlay").toggleClass("active");
+                    $(this).toggleClass("active");
+                    console.log("hamburger clicked, menu active:", $(".mobile-menu").hasClass("active"));
+                });
+
+                $(".menu-overlay").off("click").on("click", function () {
+                    $(".mobile-menu, .menu-overlay, .hamburger").removeClass("active");
+                    console.log("overlay clicked - menu closed");
+                });
+
+                $(document).off("click", ".gnb-mobile .gnb_title").on("click", ".gnb-mobile .gnb_title", function (e) {
+                    e.preventDefault();
+                    console.log("gnb_title clicked:", $(this).text().trim());
+                    const parentLi = $(this).closest("li");
+                    if (parentLi.hasClass("active")) {
+                        parentLi.removeClass("active");
+                        console.log("closing dropdown for:", $(this).text().trim());
+                    } else {
+                        $(".gnb-mobile li.active").removeClass("active");
+                        parentLi.addClass("active");
+                        console.log("opening dropdown for:", $(this).text().trim());
+                    }
+                });
+
+                console.log("gnb-mobile content:", $(".mobile-menu .gnb-mobile").html() ? "exists" : "empty");
+            });
+        </script>
         <div class="visual">
             <h2>HaagenDazs B2B</h2>
             <img src="image/visual_01.png">
         </div>
     </header>
     <main>
-        <div class="info_warp_01">
-            <div class="info">
-                <img src="image/sub_01.png">
-                <ul>
-                    <li>
-                        <h2>카페 & 레스토랑</h2>
-                    </li>
-                    <li>국내 유명 프랜차이즈 카페와 레스토랑의 최고의 디저트를 위해 하겐다즈 제품을 공급하고 있습니다.</li>
-                </ul>
-            </div>
-            <div class="info">
-                <img src="image/sub_02.png">
-                <ul>
-                    <li>
-                        <h2>호텔</h2>
-                    </li>
-                    <li>국내 다수의 특급 호텔에서 수준높은 서비스와 음식을 제공하기 위해 하겐다즈 아이스크림 제품을 사용하고 있습니다.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="info_warp_02">
-            <div class="info">
-                <ul>
-                    <li>
-                        <h2>골프 & 리조트</h2>
-                    </li>
-                    <li>국내외의 주요 골프장과 리조트에서 하겐다즈 아이스크림 제품을 공급하고 있습니다.</li>
-                </ul>
-                <img src="image/sub_03.png">
-            </div>
-            <div class="info">
-                <ul>
-                    <li>
-                        <h2>항공사 & 공항</h2>
-                    </li>
-                    <li>긴 여행 중 즐거움을 위해 국내외의 주요 항공사에 기내식으로 하겐다즈 아이스크림이 사용되고 있습니다.</li>
-                </ul>
-                <img src="image/sub_04.png">
-            </div>
-        </div>
-        <div class="info_bottom_01">
-            <h2>1</h2>
-            <ul>
-                <li>
-                    <h2>하겐다즈<br>크리에이션 메뉴</h2>
-                </li>
-                <li>하겐다즈의 다양한 플레이버를 통해<br>차별회된 크리에이션 메뉴를 만들어보세요.</li>
-            </ul>
-        </div>
-        <div class="info_bottom_02">
-            <h2>2</h2>
-            <ul>
-                <li>
-                    <h2>하겐다즈<br>프리미엄 아이스크림 케이크</h2>
-                </li>
-                <li>디저트 전문 쉐프가 개발한 프리미엄 케이크를<br>만나보세요! 시즌과 목적에 맞춘 차별화된<br>케이크도 운영 가능합니다.</li>
-            </ul>
-        </div>
-        <div class="info_bottom_03">
-            <h2>3</h2>
-            <ul>
-                <li>
-                    <h2>하겐다즈<br>반제품 메뉴</h2>
-                </li>
-                <li>마카롱, 아이스크림 퍽 등<br>하겐다즈 반제품을 이용하여 누구나<br>손쉽게 프리미엄 디저트를 만들 수 있습니다.</li>
-            </ul>
-        </div>
     </main>
     <footer>
         <div class="footer">
             <h1><a href="index.html"><img src="image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_02_ft.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
@@ -126,49 +148,34 @@
         </div>
     </footer>
     <script>
-        /* === IntersectionObserver로 nav shrink 토글하기 ===
-        동작: header가 뷰포트에서 벗어나면 shrink 적용(= menu가 보이기 시작할 때)
-        장점: scroll-snap / 점프 스크롤 / margin/padding 영향 모두 상관 없음
-        */
         (function () {
             const nav = document.querySelector('.nav_warp');
             const header = document.querySelector('header');
 
             if (!nav || !header) return;
 
-            // 옵저버 콜백: header가 보이지 않으면 shrink 추가
             const io = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
-                        // header가 화면에 보이면 원래 상태
                         nav.classList.remove('shrink');
                     } else {
-                        // header가 화면에서 벗어나면 shrink
                         nav.classList.add('shrink');
                     }
                 });
             }, {
                 root: null,
-                // header가 완전히 사라질 필요 없이 10%라도 밖으로 나가면 shrink
                 threshold: 0.8,
-                // 네비 높이만큼 미리 트리거 하고 싶으면 rootMargin 사용 (예: '-50px 0px 0px 0px')
-                // rootMargin: `-${Math.round(nav.offsetHeight / 2)}px 0px 0px 0px`,
             });
 
             io.observe(header);
 
-            // 초기 상태 보정 (페이지 새로고침 시)
-            // (IntersectionObserver가 즉시 콜백을 실행하지 않는 환경에 대비)
             window.addEventListener('load', () => {
-                // 강제로 체크: header의 bounding rect로 결정
                 const rect = header.getBoundingClientRect();
                 if (rect.bottom <= 0) nav.classList.add('shrink');
                 else nav.classList.remove('shrink');
             });
 
-            // (옵션) 리사이즈 시 네비 높이 등 변화에 대응
             window.addEventListener('resize', () => {
-                // 필요 시 rootMargin 재설정하려면 옵저버를 재생성하는 로직을 여기에 넣어도 됨.
             });
         })();
     </script>
