--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="index.html"><img src="image/logo_01.png" class="logo-default"></a>
                         <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
                     <ul class="gnb">
@@ -76,7 +76,7 @@
                     </ul>
                     <p>
                         <a href="" class="login">login</a>
-                        <a href="" class="hamburger"><img src="image/hamburger.png"></a>
+                        <a href="" class="hamburger"><img src="../image/hamburger.png"></a>
                     </p>
                     <div class="mobile-menu">
                         <ul class="gnb-mobile"></ul>
@@ -369,7 +369,7 @@
     </script>
     <footer>
         <div class="footer">
-            <h1><a href="index.html"><img src="image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_01.png"></a></h1>
             <h1><a href="index.html"><img src="image/logo_02_ft.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
