--- a/sub_01.html
+++ b/sub_01.html
@@ -15,7 +15,7 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="index.html"><img src="image/logo_01.png" class="logo-default"></a>
                         <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
                     <ul class="gnb">
@@ -125,7 +125,7 @@
     </main>
     <footer>
         <div class="footer">
-            <h1><a href="index.html"><img src="image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_01.png"></a></h1>
             <h1><a href="index.html"><img src="image/logo_02_ft.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
