--- a/sub_02.html
+++ b/sub_02.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/sub_02.css">
-    <link rel="stylesheet" href="css/slider.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
+    <link rel="stylesheet" href="/css/sub_01.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Document</title>
 </head>
 
@@ -17,80 +15,118 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="index.html"><img src="image/logo.png" class="logo-default"></a>
+                        <a href="index.html"><img src="image/logo_01.png" class="logo-default"></a>
                         <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"></a>
                     </h1>
-                    <ul>
-                        <li><a href="">Brand</a></li>
-                        <li><a href="">Menu</a></li>
-                        <li><a href="">Online Shop</a></li>
-                        <li><a href="sub_02.html">Store</a></li>
-                        <li><a href="sub_01.html">B2B</a></li>
+                    <ul class="gnb">
+                        <li>
+                            <p class="gnb_title">Brand</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="">소개</a></li>
+                                <li><a href="">BI</a></li>
+                                <li><a href="">본사</a></li>
+                                <li><a href="">오시는길</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">Menu</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="">온라인스토어</a></li>
+                                <li class="dropdown-sub"><a href="">컵 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="">바 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="">샌드&콘 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="">케이크</a></li>
+                                <li><a href="">오프라인 스토어</a></li>
+                                <li class="dropdown-sub"><a href="">크레이션 메뉴</a></li>
+                                <li class="dropdown-sub"><a href="">아이스크림 드링크</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">Online Shop</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="">컵 아이스크림</a></li>
+                                <li><a href="">바 아이스크림</a></li>
+                                <li><a href="">샌드&콘 아이스크림</a></li>
+                                <li><a href="">케이크</a></li>
+                                <li><a href="">공지</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">Store</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="/sub_02.html">매장정보</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p class="gnb_title">B2B</p>
+                            <ul class="dropdown-nav">
+                                <li><a href="/sub_01.html">비즈니스 파트너</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                    <p><a href="">login</a></p>
+                    <p>
+                        <a href="" class="login">login</a>
+                        <a href="" class="hamburger"><img src="../image/hamburger.png"></a>
+                    </p>
+                    <div class="mobile-menu">
+                        <ul class="gnb-mobile"></ul>
+                    </div>
+                    <div class="menu-overlay"></div>
                 </div>
             </div>
         </div>
+        <script>
+            $(window).on("load", function () {
+                console.log("window loaded - initializing mobile menu copy");
+
+                const gnbHtml = $(".gnb").html();
+                if (!gnbHtml) {
+                    console.warn("복사할 .gnb 내용이 비어있습니다.");
+                } else {
+                    $(".gnb-mobile").html(gnbHtml);
+                    console.log(".gnb -> .gnb-mobile 복사 완료");
+                }
+
+                $(".hamburger").off("click").on("click", function (e) {
+                    e.preventDefault();
+                    $(".mobile-menu, .menu-overlay").toggleClass("active");
+                    $(this).toggleClass("active");
+                    console.log("hamburger clicked, menu active:", $(".mobile-menu").hasClass("active"));
+                });
+
+                $(".menu-overlay").off("click").on("click", function () {
+                    $(".mobile-menu, .menu-overlay, .hamburger").removeClass("active");
+                    console.log("overlay clicked - menu closed");
+                });
+
+                $(document).off("click", ".gnb-mobile .gnb_title").on("click", ".gnb-mobile .gnb_title", function (e) {
+                    e.preventDefault();
+                    console.log("gnb_title clicked:", $(this).text().trim());
+                    const parentLi = $(this).closest("li");
+                    if (parentLi.hasClass("active")) {
+                        parentLi.removeClass("active");
+                        console.log("closing dropdown for:", $(this).text().trim());
+                    } else {
+                        $(".gnb-mobile li.active").removeClass("active");
+                        parentLi.addClass("active");
+                        console.log("opening dropdown for:", $(this).text().trim());
+                    }
+                });
+
+                console.log("gnb-mobile content:", $(".mobile-menu .gnb-mobile").html() ? "exists" : "empty");
+            });
+        </script>
         <div class="visual">
-            <h2>HaagenDazs Store</h2>
+            <h2>HaagenDazs B2B</h2>
             <img src="image/visual_02.png">
         </div>
     </header>
     <main>
-        <div class="store_container">
-            <div class="store"><img src="image/store_01.png">
-                <ul>
-                    <li>
-                        <h2>하겐다즈 여의도점</h2>
-                    </li>
-                    <li>서울특별시 영등포구 의사당대로 108 (여의도동) 미성아파트 상가동 아일렉스 빌딩 1층</li>
-                </ul>
-            </div>
-        </div>
-        <div class="store_container">
-            <div class="store"><img src="image/store_02.png">
-                <ul>
-                    <li>
-                        <h2>하겐다즈 분당미금점</h2>
-                    </li>
-                    <li>경기도 성남시 분당구 돌마로 43 (금곡동) 메디파크 1층 101호</li>
-                </ul>
-            </div>
-        </div>
-        <div class="store_container">
-            <div class="store"><img src="image/store_03.png">
-                <ul>
-                    <li>
-                        <h2>하겐다즈 부산마린시티점</h2>
-                    </li>
-                    <li>부산광역시 해운대구 마린시티2로 38, 103호 (우동, 아이파크상가동 T3) </li>
-                </ul>
-            </div>
-        </div>
-        <div class="store_container">
-            <div class="store"><img src="image/store_04.png">
-                <ul>
-                    <li>
-                        <h2>하겐다즈 서초점</h2>
-                    </li>
-                    <li>서울특별시 서초구 서초대로38길 12, 1층 111-1호 (서초동)</li>
-                </ul>
-            </div>
-        </div>
-        <div class="store_container">
-            <div class="store"><img src="image/store_05.png">
-                <ul>
-                    <li>
-                        <h2>하겐다즈 판교점</h2>
-                    </li>
-                    <li>경기 성남시 분당구 분당내곡로 117 1층 101-3호 (백현동, 크래프톤타워)</li>
-                </ul>
-            </div>
-        </div>
     </main>
     <footer>
         <div class="footer">
-            <h1><a href="index.html"><img src="image/logo.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_01.png"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_02_ft.png"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
@@ -112,49 +148,34 @@
         </div>
     </footer>
     <script>
-        /* === IntersectionObserver로 nav shrink 토글하기 ===
-        동작: header가 뷰포트에서 벗어나면 shrink 적용(= menu가 보이기 시작할 때)
-        장점: scroll-snap / 점프 스크롤 / margin/padding 영향 모두 상관 없음
-        */
         (function () {
             const nav = document.querySelector('.nav_warp');
             const header = document.querySelector('header');
 
             if (!nav || !header) return;
 
-            // 옵저버 콜백: header가 보이지 않으면 shrink 추가
             const io = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
-                        // header가 화면에 보이면 원래 상태
                         nav.classList.remove('shrink');
                     } else {
-                        // header가 화면에서 벗어나면 shrink
                         nav.classList.add('shrink');
                     }
                 });
             }, {
                 root: null,
-                // header가 완전히 사라질 필요 없이 10%라도 밖으로 나가면 shrink
                 threshold: 0.8,
-                // 네비 높이만큼 미리 트리거 하고 싶으면 rootMargin 사용 (예: '-50px 0px 0px 0px')
-                // rootMargin: `-${Math.round(nav.offsetHeight / 2)}px 0px 0px 0px`,
             });
 
             io.observe(header);
 
-            // 초기 상태 보정 (페이지 새로고침 시)
-            // (IntersectionObserver가 즉시 콜백을 실행하지 않는 환경에 대비)
             window.addEventListener('load', () => {
-                // 강제로 체크: header의 bounding rect로 결정
                 const rect = header.getBoundingClientRect();
                 if (rect.bottom <= 0) nav.classList.add('shrink');
                 else nav.classList.remove('shrink');
             });
 
-            // (옵션) 리사이즈 시 네비 높이 등 변화에 대응
             window.addEventListener('resize', () => {
-                // 필요 시 rootMargin 재설정하려면 옵저버를 재생성하는 로직을 여기에 넣어도 됨.
             });
         })();
     </script>
