--- a/sub_01.html
+++ b/sub_01.html
@@ -54,13 +54,13 @@
                         <li>
                             <p class="gnb_title">Store</p>
                             <ul class="dropdown-nav">
-                                <li><a href="/sub_02.html">매장정보</a></li>
+                                <li><a href="sub_02.html">매장정보</a></li>
                             </ul>
                         </li>
                         <li>
                             <p class="gnb_title">B2B</p>
                             <ul class="dropdown-nav">
-                                <li><a href="/sub_01.html">비즈니스 파트너</a></li>
+                                <li><a href="sub_01.html">비즈니스 파트너</a></li>
                             </ul>
                         </li>
                     </ul>
