--- a/sub_02.html
+++ b/sub_02.html
@@ -66,7 +66,7 @@
                     </ul>
                     <p>
                         <a href="" class="login">login</a>
-                        <a href="" class="hamburger"><img src="../image/hamburger.png"></a>
+                        <a href="" class="hamburger"><img src="image/hamburger.png"></a>
                     </p>
                     <div class="mobile-menu">
                         <ul class="gnb-mobile"></ul>
